<resources>
    <string name="app_name">NamFragmentH_W</string>
    <string name="fragment_home_works">Fragment home works</string>
    <string name="first_task">First task</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_some_text">Enter some text</string>
    <string name="go_to">Go To</string>
    <string name="player_x">Player 1</string>
    <string name="player_o">Player 2</string>
    <string name="close">Close</string>
    <string name="second_task">Second Task</string>
    <string name="suffle">suffle</string>
    <string name="d_i_c_e">D I C E</string>
    <string name="tc_tac_toe">TC TAC TOE</string>
    <string name="exit">EXIT</string>
    <string name="navigation_fragment_home_work">Navigation fragment home work</string>
    <string name="e_x_i_t">E X I T</string>
    <string name="b_a_c_k">B A C K</string>
    <string name="tic_tac_toe">TIC TAC TOE</string>

    <style name="Styletv" parent="Widget.AppCompat.TextView">
        <item name="android:textSize">18sp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:gravity">center</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:paddingTop">15dp</item>
        <item name="android:paddingBottom">15dp</item>
    </style>

    <style name="StyleBtn" parent="Widget.AppCompat.Button">
        <item name="android:textSize">18sp</item>
        <item name="backgroundTint">#8A1C00</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:textStyle">bold</item>
        <item name="android:padding">10dp</item>

    </style>

    <style name="StyleBtnTicTacToe" parent="Widget.AppCompat.Button">
        <item name="android:textSize">45sp</item>
        <item name="backgroundTint">#F38F81</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:textStyle">bold</item>
        <item name="android:padding">10dp</item>

    </style>

    <style name="StyleTop" parent="Widget.AppCompat.TextView">
        <item name="android:textColor">#F3A631</item>
        <item name="android:textSize">22sp</item>
        <item name="android:textStyle">bold</item>
    </style>


</resources>
