<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F43F33"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Task2.Fragments.MainFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/navigation_fragment_home_work"
        android:textColor="@color/yelow"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvButtonSecondTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#040404"
        android:elevation="8dp"
        app:cardCornerRadius="200dp"
        app:strokeColor="#AEF6EBE4"
        app:strokeWidth="3dp"
        app:layout_constraintBottom_toTopOf="@+id/cvButtonFirstTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/btnSecondTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second_task"
            android:textStyle="bold"
            android:backgroundTint="#731605" />

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvButtonFirstTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#040404"
        android:elevation="8dp"
        app:cardCornerRadius="200dp"
        app:strokeColor="#AEF6EBE4"
        app:strokeWidth="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <Button
            android:id="@+id/btnFirstTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_task"
            android:textStyle="bold"
            android:backgroundTint="#731605" />

    </com.google.android.material.card.MaterialCardView>




</androidx.constraintlayout.widget.ConstraintLayout>