<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Task2.Fragments.AddUserFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flowInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="50dp"
        android:paddingEnd="100dp"
        app:constraint_referenced_ids="edNameP1, edNameP2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline1" />

    <EditText
        android:id="@+id/edNameP1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/player_x"
        android:inputType="text"
        android:textColorHint="#6D252525"
        android:backgroundTint="#000"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="@id/flowInput"
        app:layout_constraintEnd_toEndOf="@id/flowInput"
        app:layout_constraintTop_toTopOf="@id/flowInput"
        app:layout_constraintEnd_toStartOf="@id/edNameP2"/>


    <EditText
        android:id="@+id/edNameP2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/player_o"
        android:inputType="text"
        android:textColorHint="#6D252525"
        android:backgroundTint="#000"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="@id/edNameP1"
        app:layout_constraintTop_toBottomOf="@id/edNameP1"
        app:layout_constraintEnd_toEndOf="@id/edNameP1"/>




    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:backgroundTint="#1C811C"
        android:text="Start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flowInput"/>

    <Button
        android:id="@+id/btnExitAddUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:autoSizeTextType="uniform"
        android:text="@string/e_x_i_t"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>