<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Task2.Fragments.DiceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F43F33">


        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flowNameP1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            app:constraint_referenced_ids="tvNP1, tvRP1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv" />

        <TextView
            android:id="@+id/tvNP1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Name 1"
            style="@style/StyleTop"
            app:layout_constraintTop_toTopOf="@id/flowNameP1"
            app:layout_constraintEnd_toStartOf="@id/tvRP1"
            app:layout_constraintBottom_toBottomOf="@+id/flowNameP1"
            app:layout_constraintStart_toStartOf="@id/flowNameP1" />

        <TextView
            android:id="@+id/tvRP1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StyleTop"
            android:text="0"
            app:layout_constraintTop_toTopOf="@id/flowNameP1"
            app:layout_constraintEnd_toEndOf="@id/flowNameP1"
            app:layout_constraintBottom_toBottomOf="@id/flowNameP1"
            app:layout_constraintStart_toEndOf="@id/tvNP1"/>

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flowNameP2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            app:constraint_referenced_ids="tvRP2, tvNP2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/tvRP2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StyleTop"

            android:text="0"
            app:layout_constraintTop_toTopOf="@id/flowNameP2"
            app:layout_constraintBottom_toBottomOf="@id/flowNameP2"
            app:layout_constraintStart_toStartOf="@id/flowNameP2"/>

        <TextView
            android:id="@+id/tvNP2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/StyleTop"
            android:text="Name 2"
            app:layout_constraintTop_toTopOf="@id/flowNameP2"

            app:layout_constraintBottom_toBottomOf="@+id/flowNameP2"
            app:layout_constraintEnd_toEndOf="@id/flowNameP2"/>

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_i_c_e"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StyleTop"
            app:layout_constraintStart_toStartOf="@id/tv"
            app:layout_constraintEnd_toEndOf="@id/tv"
            app:layout_constraintTop_toBottomOf="@id/tv"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvDice"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:backgroundTint="#040404"
            android:elevation="8dp"
            app:cardCornerRadius="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline1"

            app:strokeColor="#AEF6EBE4"
            app:strokeWidth="3dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.helper.widget.Flow
                    android:id="@+id/flowPlayground"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="25dp"
                    app:constraint_referenced_ids="imgDiceLeft, imgDiceRight"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imgDiceLeft"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_margin="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dice6"
                    app:layout_constraintBottom_toBottomOf="@id/flowPlayground"
                    app:layout_constraintEnd_toStartOf="@id/imgDiceRight"
                    app:layout_constraintStart_toStartOf="@id/flowPlayground"
                    app:layout_constraintTop_toTopOf="@id/flowPlayground" />

                <ImageView
                    android:id="@+id/imgDiceRight"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dice6"
                    app:layout_constraintBottom_toBottomOf="@id/flowPlayground"
                    app:layout_constraintEnd_toEndOf="@id/flowPlayground"
                    app:layout_constraintStart_toEndOf="@id/imgDiceLeft"
                    app:layout_constraintTop_toTopOf="@id/flowPlayground" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvButtonD"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:backgroundTint="#040404"
            android:elevation="8dp"
            app:cardCornerRadius="200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvDice"

            app:strokeColor="#AEF6EBE4"
            app:strokeWidth="3dp">

            <Button
                android:id="@+id/btnSuffle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suffle"
                android:textSize="45sp"
                android:backgroundTint="#731605" />

        </com.google.android.material.card.MaterialCardView>



        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flowBottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:constraint_referenced_ids="btnExit, btnResultD, btnMoreD"
            android:background="#FF1D00"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:autoSizeTextType="uniform"
            style="@style/StyleBtn"
            app:layout_constraintStart_toStartOf="@id/flowBottom"
            app:layout_constraintTop_toTopOf="@id/flowBottom"
            app:layout_constraintEnd_toStartOf="@id/btnResultD"
            app:layout_constraintBottom_toBottomOf="@id/flowBottom"
             />

        <Button
            android:id="@+id/btnResultD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/StyleBtn"
            android:text="Result"
            app:layout_constraintTop_toTopOf="@id/flowBottom"
            app:layout_constraintStart_toEndOf="@id/btnExit"
            app:layout_constraintEnd_toStartOf="@id/btnMoreD"
            app:layout_constraintBottom_toBottomOf="@id/flowBottom"/>

        <Button
            android:id="@+id/btnMoreD"
            android:layout_width="0dp"
            style="@style/StyleBtn"
            android:text="more"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/btnResultD"
            app:layout_constraintEnd_toEndOf="@id/flowBottom"
            app:layout_constraintTop_toTopOf="@id/flowBottom"
            app:layout_constraintBottom_toBottomOf="@id/flowBottom"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>